js/src/tests/test262/built-ins/NativeErrors/SyntaxError/prototype.js
assert
.
sameValue
(
SyntaxError
.
prototype
Object
.
getPrototypeOf
(
new
SyntaxError
)
)
;
verifyNotEnumerable
(
SyntaxError
"
prototype
"
)
;
verifyNotWritable
(
SyntaxError
"
prototype
"
)
;
verifyNotConfigurable
(
SyntaxError
"
prototype
"
)
;
reportCompare
(
0
0
)
;
